<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="10dp"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginVertical="5dp"
                    android:text="@string/medicine_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/result_activity_text_view_name"
                    android:text=" "
                    android:textColor="#000"
                    android:gravity="center"
                    android:textSize="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginVertical="5dp"
                    android:text="@string/use"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/result_activity_text_view_gen_name"
                    android:layout_marginVertical="5dp"
                    android:text=" "
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="#000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginVertical="5dp"
                    android:text="@string/side_effects"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/result_activity_text_view_use"
                    android:layout_marginVertical="5dp"
                    android:text=" "
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="#000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginVertical="5dp"
                    android:text="@string/generic_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/result_activity_text_view_side_effects"
                    android:layout_marginVertical="5dp"
                    android:text=" "
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="#000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginVertical="5dp"
                    android:text="@string/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/result_activity_text_view_price"
                    android:layout_marginVertical="5dp"
                    android:text=" "
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="#000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginVertical="5dp"
                    android:text="@string/how_to_use_this_medicine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/result_activity_text_view_how_to_use"
                    android:layout_marginVertical="5dp"
                    android:text=" "
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="#000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginVertical="5dp"
                    android:text="@string/how_medicine_works"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/result_activity_text_view_how_it_works"
                    android:layout_marginVertical="5dp"
                    android:text=" "
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="#000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginVertical="5dp"
                    android:text="@string/quick_tips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/result_activity_text_view_quick_tips"
                    android:layout_marginVertical="5dp"
                    android:text=" "
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="#000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginVertical="5dp"
                    android:text="@string/missed_dosage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/result_activity_text_view_missed_dosage"
                    android:layout_marginVertical="5dp"
                    android:text=" "
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="#000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginVertical="5dp"
                    android:text="@string/alternate_medicine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/result_activity_text_view_alternate_medicines"
                    android:layout_marginVertical="5dp"
                    android:text=" "
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="#000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/changeMyLang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/changeLang"
                    android:layout_centerHorizontal="true"
                    android:padding="10dp" />
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
